<resources>
    <string name="app_name">My Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_map">Map</string>
    <string name="title_activity_maps">Map</string>

    <string name="CCP_info">Recycle Drop Point: Create</string>
    <string name="CCP_name">Enter the name of the Drop Point</string>
    <string name="CCP_recycleType">Add Recycle Type</string>
    <string name="CCP_img">Add an Photo:</string>
    <string name="CCP_submit">Submit</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="Login_info">Login:</string>
    <string name="Login_email">Email</string>
    <string name="Login_password">Password</string>
    <string name="Login_button">Login</string>
</resources>
